# nam_plugin

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  BullseyeCoverageExclusions  CMakeLists.txt  CODEOWNERS  README.md
libs/AudioDSPTools/: CMakeLists.txt
libs/AudioDSPTools/src/: ImpulseResponse.cpp  NoiseGate.cpp  RecursiveLinearFilter.cpp  dsp.cpp  wav.cpp
libs/json/: CMakeLists.txt
plugin/: CMakeLists.txt  NeuralAmpModeler.cpp  NeuralAmpModeler.h
